--- a/RegExp/RegExp_10.vcxproj.filters
+++ b/RegExp/RegExp_10.vcxproj.filters
@@ -15,10 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="RegExpTest.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="RegExpTestDlg.cpp">
+    <ClCompile Include="RegExp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
@@ -26,10 +23,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RegExpTest.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="RegExpTestDlg.h">
+    <ClInclude Include="RegExp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Resource.h">
@@ -43,15 +37,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\RegExpTest.ico">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="res\RegExpTest.rc2">
-      <Filter>Resource Files</Filter>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="RegExpTest.rc">
+    <ResourceCompile Include="RegExp.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
