Updated Shareaza project for VS2010.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8795 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/TorrentWizard/TorrentWizard_10.vcxproj
+++ b/TorrentWizard/TorrentWizard_10.vcxproj
@@ -269,6 +269,7 @@
   <ItemGroup>
     <ClCompile Include="..\shareaza\BENode.cpp" />
     <ClCompile Include="..\shareaza\Buffer.cpp" />
+    <ClCompile Include="..\shareaza\Strings.cpp" />
     <ClCompile Include="CmdLine.cpp" />
     <ClCompile Include="PageCommandline.cpp" />
     <ClCompile Include="PageComment.cpp" />
@@ -291,6 +292,7 @@
   <ItemGroup>
     <ClInclude Include="..\shareaza\BENode.h" />
     <ClInclude Include="..\shareaza\Buffer.h" />
+    <ClInclude Include="..\shareaza\Strings.h" />
     <ClInclude Include="CmdLine.h" />
     <ClInclude Include="PageCommandline.h" />
     <ClInclude Include="PageComment.h" />
